--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <!-- <img src="assets/img/logo.png" alt=""> -->
         <!-- <h1 class="sitename">Bootslander</h1> -->
         <!-- <div style="background-color: pink; width: 150px; height: 50px;"> -->
-        <img src="/assets/img/loggoo.png" alt="" class="img-fluid"
+        <img src="assets/img/loggoo.png" alt="" class="img-fluid"
           style="width: 100px; height: 100%; object-fit: cover;">
         <!-- </div> -->
       </a>
@@ -693,7 +693,7 @@
 
           <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="member">
-              <div class="pic"><img src="/assets/img/team/hadja.jpeg" class="img-fluid" alt="">
+              <div class="pic"><img src="assets/img/team/hadja.jpeg" class="img-fluid" alt="">
               </div>
               <div class="member-info">
                 <h4>Hadja I. Diallo</h4>
