--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
         <div class="row gy-4 justify-content-between">
           <div class="col-lg-4 order-lg-last hero-img" data-aos="zoom-out" data-aos-delay="100">
             <!-- <img src="assets/img/hero-img.png" class="img-fluid animated" alt="Tech Blog Hero Image"> -->
-            <img src="assets/img/hero-img.png" class="img-fluid animated" alt="Tech Blog Hero Image">
+            <img src="assets/img/iPhone-13-PRO-www.facebook.com.png" class="img-fluid animated" style="height: 60vh;"
+              alt="Tech Blog Hero Image">
           </div>
 
           <div class="col-lg-6 d-flex flex-column justify-content-center" data-aos="fade-in">
@@ -288,7 +289,8 @@
                 </p>
               </div>
               <div class="col-lg-6 order-1 order-lg-2 text-center">
-                <img src="assets/img/working-3.jpg" alt="Values Image" class="img-fluid">
+                <img src="assets/img/marketing-branding-creativity-business-values.jpg" alt="Values Image"
+                  class="img-fluid">
               </div>
             </div>
           </div><!-- End Tab Content Item -->
@@ -882,7 +884,7 @@
               <i class="bi bi-geo-alt flex-shrink-0"></i>
               <div>
                 <h3>Address</h3>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>Sinkor, Monrovia, Liberia</p>
               </div>
             </div><!-- End Info Item -->
 
@@ -890,7 +892,7 @@
               <i class="bi bi-telephone flex-shrink-0"></i>
               <div>
                 <h3>Call Us</h3>
-                <p>+231 5589 55488 55</p>
+                <p>+231 777 850 481</p>
               </div>
             </div><!-- End Info Item -->
 
@@ -898,7 +900,7 @@
               <i class="bi bi-envelope flex-shrink-0"></i>
               <div>
                 <h3>Email Us</h3>
-                <p>info@example.com</p>
+                <p>infomorganthetechenthusiast@gmail.com</p>
               </div>
             </div><!-- End Info Item -->
 
@@ -954,15 +956,17 @@
             <span class="sitename">Morgan The Tech Enthusiast</span>
           </a>
           <div class="footer-contact pt-3">
-            <p>A108 Adam Street</p>
-            <p>New York, NY 535022</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+231 5589 55488 55</span></p>
-            <p><strong>Email:</strong> <span>info@example.com</span></p>
+            <!-- <p>Sinkor</p> -->
+            <p>Monrovia, Liberia</p>
+            <p class="mt-3"><strong>Phone:</strong> <span>+231 777 850 481</span></p>
+            <p><strong>Email:</strong> <span>infomorganthetechenthusiast@gmail.com</span></p>
           </div>
           <div class="social-links d-flex mt-4">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
-            <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""><i class="bi bi-instagram"></i></a>
+            <a href="https://x.com/MorganTechBlog?t=inyYFl1TqJUwB2rUzdV9CA&s=08" target="_blank"><i
+                class="bi bi-twitter-x"></i></a>
+            <a href="https://web.facebook.com/profile.php?id=61559827598587" target="_blank"><i
+                class="bi bi-facebook"></i></a>
+            <a href=""><i class="bi bi-youtube"></i></a>
             <a href=""><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
