--- a/index.html
+++ b/index.html
@@ -2,11 +2,48 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Home - MorganTheTechEnthusiast Tech Blog</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+
+  <!-- Basic Meta Tags -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="author" content="Morgan The Tech Enthusiast">
+  <meta name="robots" content="index, follow">
+
+  <!-- SEO Meta Tags -->
+  <meta name="description"
+    content="Empowering Liberia's tech landscape with innovative solutions, we provide services that foster growth and sustainability. From spotlighting startups and innovators to offering digital marketing strategies, we are dedicated to nurturing Liberia's technological potential. Our mission is to deliver impactful services, including educational content, event promotions, and community-driven initiatives. With a focus on collaboration, we create partnerships that bridge gaps in the tech ecosystem, driving progress across various sectors. Whether you're a budding entrepreneur or an established business, our tailored support helps you achieve your goals and scale effectively. Stay updated with the latest tech trends, discover opportunities for growth, and be part of a community that values innovation and creativity. Together, we can shape a future where technology uplifts communities, creates opportunities, and fosters resilience in Liberia and beyond. Explore our services today to see how we can help transform your vision into reality..">
+  <meta name="keywords"
+    content="Liberia tech, tech startups Liberia, innovation in Liberia, technology services Liberia, Liberian events, digital marketing Liberia, clean water solutions Liberia, collaboration Liberia, tech blog Liberia, Morgan The Tech Enthusiast">
+  <meta name="geo.region" content="LR"> <!-- ISO code for Liberia -->
+  <meta name="geo.placename" content="Liberia">
+  <meta name="geo.position" content="6.4281; -9.4295"> <!-- Latitude and Longitude for Liberia -->
+  <meta name="ICBM" content="6.4281, -9.4295"> <!-- Latitude and Longitude -->
+
+  <!-- Open Graph Meta Tags (For Social Media) -->
+  <meta property="og:title" content="Morgan The Tech Enthusiast - Technology & Innovation in Liberia">
+  <meta property="og:description"
+    content="Your gateway to technology and innovation in Liberia, we specialize in creating impactful solutions for startups, businesses, and communities. Our services include media coverage for tech projects, educational content, and promoting events that inspire collaboration and knowledge-sharing. We highlight innovators, foster partnerships, and support sustainable initiatives to drive Liberia's growth in the tech ecosystem. With a strong focus on digital marketing, we help businesses improve their online presence, connect with audiences, and thrive in competitive markets. Our commitment to innovation extends to community-based projects like clean water access, showcasing how technology can solve real-world problems. Whether you’re looking for guidance as a startup or seeking to stay informed about the latest trends in technology, our expertise and resources are designed to meet your needs. Join us in building a brighter future for Liberia, where technology empowers individuals and transforms communities for the better.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://morganthetechenthusiast.netlify.app/">
+  <!-- <meta property="og:image" content="https://yourwebsite.com/images/preview.jpg"> -->
+  <meta property="og:locale" content="en_LR">
+
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Morgan The Tech Enthusiast - Technology & Innovation in Liberia">
+  <meta name="twitter:description"
+    content="Explore technology and innovation services tailored for Liberia. Join us in building solutions for communities and startups.">
+  <meta name="twitter:image" content="https://yourwebsite.com/images/preview.jpg">
+  <meta name="twitter:site" content="@MorganTheTechEnthusiast">
+
+  <!-- Favicon -->
+  <link rel="icon" href="/path-to-your-favicon.ico" type="image/x-icon">
+
+  <!-- Canonical Link -->
+  <link rel="canonical" href="https://morganthetechenthusiast.netlify.app/">
+
 
   <!-- Favicons -->
   <link href="logo.jpg" rel="icon">
