--- a/index.html
+++ b/index.html
@@ -76,6 +76,43 @@
     nav a:hover {
       color: var(--nav-hover-color);
     }
+
+    /* Gallery Section */
+    .gallery-section {
+      padding: 60px 0;
+      background-color: #f4f4f4;
+    }
+
+    .gallery-section h2 {
+      text-align: center;
+      color: var(--primary-color);
+      margin-bottom: 40px;
+      font-size: 2.5rem;
+    }
+
+    .gallery-item {
+      position: relative;
+      /* overflow: hidden; */
+      cursor: pointer;
+    }
+
+    .gallery-item img {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+      transition: transform 0.3s ease;
+      border-radius: 5px;
+
+    }
+
+    /* .gallery-item:hover img {
+            transform: scale(1.1);
+        } */
+
+    .gallery-item iframe {
+      width: 100%;
+      height: auto;
+    }
   </style>
   <!-- =======================================================
   * Template Name: Bootslander
@@ -136,8 +173,8 @@
         <div class="row gy-4 justify-content-between">
           <div class="col-lg-4 order-lg-last hero-img" data-aos="zoom-out" data-aos-delay="100">
             <!-- <img src="assets/img/hero-img.png" class="img-fluid animated" alt="Tech Blog Hero Image"> -->
-            <img src="assets/img/iPhone-13-PRO-www.facebook.com.png" class="img-fluid animated" style="height: 60vh;"
-              alt="Tech Blog Hero Image">
+            <img src="assets/img/iPhone-13-PRO-www.facebook.com.png" class="img-fluid animated"
+              style="height: 60vh; width: 100%; object-fit: contain;" alt="Tech Blog Hero Image">
           </div>
 
           <div class="col-lg-6 d-flex flex-column justify-content-center" data-aos="fade-in">
@@ -307,7 +344,7 @@
                 </ul>
               </div>
               <div class="col-lg-6 order-1 order-lg-2 text-center">
-                <img src="assets/img/working-2.jpg" alt="Vision Image" class="img-fluid">
+                <img src="assets/img/arrow-pointing-forward.jpg" alt="Vision Image" class="img-fluid">
               </div>
             </div>
           </div><!-- End Tab Content Item -->
@@ -362,17 +399,20 @@
         <div class="row gy-4">
 
           <!-- Service Item 1 -->
+
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="service-item position-relative">
               <div class="icon">
                 <i class="bi bi-megaphone" style="color: #0dcaf0;"></i>
               </div>
-              <a href="#" class="stretched-link">
+              <a href="#contact" class="stretched-link">
                 <h3>Media Coverage for Tech Startups</h3>
               </a>
-              <p>Spotlighting groundbreaking tech startups and projects to help them thrive in competitive markets.</p>
+              <p>Spotlighting groundbreaking tech startups and projects to help them thrive in competitive markets.
+              </p>
             </div>
-          </div><!-- End Service Item -->
+          </div>
+          <!-- End Service Item -->
 
           <!-- Service Item 2 -->
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
@@ -380,7 +420,7 @@
               <div class="icon">
                 <i class="bi bi-calendar-event" style="color: #fd7e14;"></i>
               </div>
-              <a href="#" class="stretched-link">
+              <a href="#contact" class="stretched-link">
                 <h3>Tech Event Promotion</h3>
               </a>
               <p>Collaborating with tech communities to promote hackathons, conferences, and meetups for strong
@@ -394,7 +434,7 @@
               <div class="icon">
                 <i class="bi bi-newspaper" style="color: #20c997;"></i>
               </div>
-              <a href="#" class="stretched-link">
+              <a href="#contact" class="stretched-link">
                 <h3>Tech News & Updates</h3>
               </a>
               <p>Stay informed with the latest trends, product launches, and innovation news in the tech ecosystem.</p>
@@ -407,7 +447,7 @@
               <div class="icon">
                 <i class="bi bi-lightbulb" style="color: #f3268c;"></i>
               </div>
-              <a href="#" class="stretched-link">
+              <a href="#contact" class="stretched-link">
                 <h3>Spotlight on Innovators</h3>
               </a>
               <p>Featuring tech innovators to inspire creativity and push the boundaries of innovation.</p>
@@ -420,7 +460,7 @@
               <div class="icon">
                 <i class="bi bi-book" style="color: #df1529;"></i>
               </div>
-              <a href="#" class="stretched-link">
+              <a href="#contact" class="stretched-link">
                 <h3>Educational Content & Tutorials</h3>
               </a>
               <p>Explore in-depth guides and tutorials on programming, design, and emerging technologies.</p>
@@ -433,7 +473,7 @@
               <div class="icon">
                 <i class="bi bi-people" style="color: #6610f2;"></i>
               </div>
-              <a href="#" class="stretched-link">
+              <a href="#contact" class="stretched-link">
                 <h3>Startup Consultation & Support</h3>
               </a>
               <p>Providing tailored advice to help startups navigate challenges and achieve their goals.</p>
@@ -446,7 +486,7 @@
               <div class="icon">
                 <i class="bi bi-person-badge" style="color: #f39c12;"></i>
               </div>
-              <a href="#" class="stretched-link">
+              <a href="#contact" class="stretched-link">
                 <h3>Podcast Interviews</h3>
               </a>
               <p>Highlighting stories and achievements of innovators in the tech community.</p>
@@ -459,7 +499,7 @@
               <div class="icon">
                 <i class="bi bi-broadcast" style="color: #198754;"></i>
               </div>
-              <a href="#" class="stretched-link">
+              <a href="#contact" class="stretched-link">
                 <h3>Digital Marketing for Tech Businesses</h3>
               </a>
               <p>Crafting strategies to enhance the digital presence of tech companies effectively.</p>
@@ -472,7 +512,7 @@
               <div class="icon">
                 <i class="bi bi-handshake" style="color: #ffc107;"></i>
               </div>
-              <a href="#" class="stretched-link">
+              <a href="#contact" class="stretched-link">
                 <h3>Collaboration Opportunities</h3>
               </a>
               <p>Fostering partnerships between innovators, businesses, and communities to drive growth.</p>
@@ -487,13 +527,12 @@
 
 
     <!-- Gallery Section -->
-    <section id="gallery" class="gallery section">
+    <!-- <section id="gallery" class="gallery section">
 
-      <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Gallery</h2>
         <div><span>Check Our</span> <span class="description-title">Gallery</span></div>
-      </div><!-- End Section Title -->
+      </div>
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
@@ -505,7 +544,7 @@
                 <img src="assets/img/gallery/gallery-1.jpg" alt="" class="img-fluid">
               </a>
             </div>
-          </div><!-- End Gallery Item -->
+          </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
@@ -513,7 +552,7 @@
                 <img src="assets/img/gallery/gallery-2.jpg" alt="" class="img-fluid">
               </a>
             </div>
-          </div><!-- End Gallery Item -->
+          </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
@@ -521,7 +560,7 @@
                 <img src="assets/img/gallery/gallery-3.jpg" alt="" class="img-fluid">
               </a>
             </div>
-          </div><!-- End Gallery Item -->
+          </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
@@ -529,7 +568,7 @@
                 <img src="assets/img/gallery/gallery-4.jpg" alt="" class="img-fluid">
               </a>
             </div>
-          </div><!-- End Gallery Item -->
+          </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
@@ -537,7 +576,7 @@
                 <img src="assets/img/gallery/gallery-5.jpg" alt="" class="img-fluid">
               </a>
             </div>
-          </div><!-- End Gallery Item -->
+          </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
@@ -545,7 +584,7 @@
                 <img src="assets/img/gallery/gallery-6.jpg" alt="" class="img-fluid">
               </a>
             </div>
-          </div><!-- End Gallery Item -->
+          </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
@@ -553,7 +592,7 @@
                 <img src="assets/img/gallery/gallery-7.jpg" alt="" class="img-fluid">
               </a>
             </div>
-          </div><!-- End Gallery Item -->
+          </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
@@ -561,13 +600,142 @@
                 <img src="assets/img/gallery/gallery-8.jpg" alt="" class="img-fluid">
               </a>
             </div>
-          </div><!-- End Gallery Item -->
+          </div>
 
         </div>
 
       </div>
 
-    </section><!-- /Gallery Section -->
+    </section> -->
+    <!-- /Gallery Section -->
+
+    <!-- Gallery Section with Tabs -->
+    <section id="gallery" class="gallery-section">
+      <div class=" container">
+        <h2 class="mt-5">Gallery</h2>
+
+
+        <!-- Tabs Navigation -->
+        <!-- <ul class="nav nav-pills mb-4" id="galleryTab" role="tablist">
+          <li class="nav-item">
+              <a class="nav-link active" id="photos-tab" data-toggle="pill" href="#photos" role="tab"
+                  aria-controls="photos" aria-selected="true">Photos</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" id="videos-tab" data-toggle="pill" href="#videos" role="tab"
+                  aria-controls="videos" aria-selected="false">Videos</a>
+          </li>
+      </ul> -->
+
+        <!-- Tab Content -->
+        <div class="tab-content" id="galleryTabContent">
+          <div class="tab-pane fade show active" id="photos" role="tabpanel" aria-labelledby="photos-tab">
+            <div class="row">
+              <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+                <div class="gallery-item" data-toggle="modal" data-target="#photoModal1">
+                  <img src="assets/img/gallery/osc003.jpg" alt="Photo 1">
+                </div>
+                <p class="description">Orange Summer Challenge Liberia 1st Edition 2024</p>
+              </div>
+              <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+                <div class="gallery-item" data-toggle="modal" data-target="#photoModal2">
+                  <img src="assets/img/gallery/gallery-2.jpg" alt="Photo 2">
+                </div>
+                <p class="description">Visionary Women of the Revolutionary National Youth League - CDC
+                </p>
+              </div>
+            </div>
+            <!-- <div class="tab-pane fade" id="videos" role="tabpanel" aria-labelledby="videos-tab">
+                      <div class="row">
+                          <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+                              <div class="gallery-item" data-toggle="modal" data-target="#videoModal1">
+                                  <iframe src="https://www.youtube.com/embed/video_id" frameborder="0"
+                                      allowfullscreen></iframe>
+                              </div>
+                              <p class="description">Description of video 1</p>
+                          </div>
+                      </div>
+                  </div> -->
+          </div>
+        </div>
+    </section>
+
+
+    <!-- Modal for Photo 1 -->
+    <div class="modal fade" id="photoModal1" tabindex="-1" aria-labelledby="photoModal1Label" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="photoModal1Label">Visionaries of the Revolutionary National Youth
+              League - CDC</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <img src="assets/img/gallery/osc001.jpg" class="img-fluid"
+              style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 1">
+            <img src="assets/img/gallery/osc002.jpg" class="img-fluid"
+              style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 1">
+            <img src="assets/img/gallery/osc003.jpg" class="img-fluid"
+              style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 1">
+            <img src="assets/img/gallery/osc004.jpg" class="img-fluid"
+              style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 1">
+            <img src="assets/img/gallery/osc005.jpg" class="img-fluid"
+              style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 1">
+            <img src="assets/img/gallery/osc006.jpg" class="img-fluid"
+              style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 1">
+            <img src="assets/img/gallery/osc007.jpg" class="img-fluid"
+              style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 1">
+            <img src="assets/img/gallery/osc008.jpg" class="img-fluid"
+              style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 1">
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+    <!-- Modal for Photo 2 -->
+    <div class="modal fade" id="photoModal2" tabindex="-1" aria-labelledby="photoModal2Label" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="photoModal2Label">Visionary Women of the Revolutionary National
+              Youth League - CDC</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <!-- <div class="row"> -->
+            <img src="assets/img/gallery/gallery-6.jpg" class="img-fluid"
+              style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 2">
+            <img src="assets/img/gallery/gallery-7.jpg" class="img-fluid"
+              style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 2">
+            <img src="assets/img/gallery/gallery-8.jpg" class="img-fluid"
+              style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 2">
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Modal for Video 1 -->
+    <!-- <div class="modal fade" id="videoModal1" tabindex="-1" aria-labelledby="videoModal1Label" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-lg">
+      <div class="modal-content">
+          <div class="modal-header">
+              <h5 class="modal-title" id="videoModal1Label">Video 1</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+              </button>
+          </div>
+          <div class="modal-body">
+              <iframe src="https://www.youtube.com/embed/video_id" frameborder="0" allowfullscreen></iframe>
+          </div>
+      </div>
+  </div>
+</div> -->
+    </div>
 
     <!-- Testimonials Section -->
     <!-- <section id="testimonials" class="testimonials section dark-background">
@@ -1085,6 +1253,8 @@
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
