--- a/index.html
+++ b/index.html
@@ -637,13 +637,13 @@
                 </div>
                 <p class="description">Orange Summer Challenge Liberia 1st Edition 2024</p>
               </div>
-              <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+              <!-- <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
                 <div class="gallery-item" data-toggle="modal" data-target="#photoModal2">
                   <img src="assets/img/gallery/gallery-2.jpg" alt="Photo 2">
                 </div>
                 <p class="description">Visionary Women of the Revolutionary National Youth League - CDC
                 </p>
-              </div>
+              </div> -->
             </div>
             <!-- <div class="tab-pane fade" id="videos" role="tabpanel" aria-labelledby="videos-tab">
                       <div class="row">
@@ -994,10 +994,12 @@
                 <h4>Stephen M. Parteh</h4>
                 <span>IT Manager</span>
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter-x"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="https://github.com/Stephenparteh" target="_blank"><i class="bi bi-github"></i></a>
+                  <a href="https://web.facebook.com/stephen.parteh" target="_blank"><i class="bi bi-facebook"></i></a>
+                  <a href="https://www.instagram.com/stephen_the_professor/" target="_blank"><i
+                      class="bi bi-instagram"></i></a>
+                  <a href="https://www.linkedin.com/in/professor-stephen-4a1095290/" target="_blank"><i
+                      class="bi bi-linkedin"></i></a>
                 </div>
               </div>
             </div>
