--- a/index.html
+++ b/index.html
@@ -666,8 +666,7 @@
       <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="photoModal1Label">Visionaries of the Revolutionary National Youth
-              League - CDC</h5>
+            <h5 class="modal-title" id="photoModal1Label">Orange Summer Challenge Liberia 1st Edition 2024</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
