--- a/index.html
+++ b/index.html
@@ -637,13 +637,12 @@
                 </div>
                 <p class="description">Orange Summer Challenge Liberia 1st Edition 2024</p>
               </div>
-              <!-- <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+              <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
                 <div class="gallery-item" data-toggle="modal" data-target="#photoModal2">
-                  <img src="assets/img/gallery/gallery-2.jpg" alt="Photo 2">
+                  <img src="assets/img/gallery/csa001.jpg" alt="Photo 2">
                 </div>
-                <p class="description">Visionary Women of the Revolutionary National Youth League - CDC
-                </p>
-              </div> -->
+                <p class="description">Cyber Security Awareness 2024 </p>
+              </div>
             </div>
             <!-- <div class="tab-pane fade" id="videos" role="tabpanel" aria-labelledby="videos-tab">
                       <div class="row">
@@ -699,19 +698,30 @@
       <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="photoModal2Label">Visionary Women of the Revolutionary National
-              Youth League - CDC</h5>
+            <h5 class="modal-title" id="photoModal2Label">Cyber Security Awareness 2024</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
           <div class="modal-body">
             <!-- <div class="row"> -->
-            <img src="assets/img/gallery/gallery-6.jpg" class="img-fluid"
+            <img src="assets/img/gallery/csa001.jpg" class="img-fluid"
               style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 2">
-            <img src="assets/img/gallery/gallery-7.jpg" class="img-fluid"
+            <img src="assets/img/gallery/csa002.jpg" class="img-fluid"
               style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 2">
-            <img src="assets/img/gallery/gallery-8.jpg" class="img-fluid"
+            <img src="assets/img/gallery/csa003.jpg" class="img-fluid"
+              style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 2">
+            <img src="assets/img/gallery/csa004.jpg" class="img-fluid"
+              style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 2">
+            <img src="assets/img/gallery/csa005.jpg" class="img-fluid"
+              style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 2">
+            <img src="assets/img/gallery/csa006.jpg" class="img-fluid"
+              style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 2">
+            <img src="assets/img/gallery/csa007.jpg" class="img-fluid"
+              style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 2">
+            <img src="assets/img/gallery/csa008.jpg" class="img-fluid"
+              style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 2">
+            <img src="assets/img/gallery/csa009.jpg" class="img-fluid"
               style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 2">
           </div>
         </div>
