--- a/index.html
+++ b/index.html
@@ -643,6 +643,20 @@
                 </div>
                 <p class="description">Cyber Security Awareness 2024 </p>
               </div>
+              <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+                <div class="gallery-item" data-toggle="modal" data-target="#photoModal3">
+                  <img src="assets/img/gallery/ldtp003.jpg" alt="Photo 3">
+                </div>
+                <p class="description">LDT 10, 000 Youths Graduation Ceremony.
+                  December 12, 2024 </p>
+              </div>
+              <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+                <div class="gallery-item" data-toggle="modal" data-target="#photoModal4">
+                  <img src="assets/img/gallery/eden001.jpg" alt="Photo 3">
+                </div>
+                <p class="description">Team Eden showcased their Innovative project with investors from the U.S Embassy
+                </p>
+              </div>
             </div>
             <!-- <div class="tab-pane fade" id="videos" role="tabpanel" aria-labelledby="videos-tab">
                       <div class="row">
@@ -723,6 +737,65 @@
               style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 2">
             <img src="assets/img/gallery/csa009.jpg" class="img-fluid"
               style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 2">
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Modal for Photo 3 -->
+    <div class="modal fade" id="photoModal3" tabindex="-1" aria-labelledby="photoModal3Label" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="photoModal3Label">LDT 10, 000 Youths Graduation Ceremony.
+              December 12, 2024</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <!-- <div class="row"> -->
+            <img src="assets/img/gallery/ldtp003.jpg" class="img-fluid"
+              style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 2">
+            <img src="assets/img/gallery/ldtp004.jpg" class="img-fluid"
+              style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 2">
+            <img src="assets/img/gallery/ldtp005.jpg" class="img-fluid"
+              style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 2">
+            <img src="assets/img/gallery/ldtp006.jpg" class="img-fluid"
+              style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 2">
+            <img src="assets/img/gallery/ldtp007.jpg" class="img-fluid"
+              style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 2">
+            <!-- <img src="assets/img/gallery/csa006.jpg" class="img-fluid"
+              style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 2"> -->
+            <video src="/assets/img/gallery/ldtp001.mp4" class="img-fluid" controls></video>
+
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Modal for Photo 4 -->
+    <div class="modal fade" id="photoModal4" tabindex="-1" aria-labelledby="photoModal4Label" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="photoModal4Label">Team Eden showcased their Innovative project with investors
+              from the U.S Embassy</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <!-- <div class="row"> -->
+            <img src="assets/img/gallery/eden001.jpg" class="img-fluid"
+              style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 2">
+            <img src="assets/img/gallery/eden002.jpg" class="img-fluid"
+              style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 2">
+            <img src="assets/img/gallery/eden003.jpg" class="img-fluid"
+              style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 2">
+            <img src="assets/img/gallery/eden004.jpg" class="img-fluid"
+              style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 2">
+            <img src="assets/img/gallery/eden005.jpg" class="img-fluid"
+              style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 2">
+
           </div>
         </div>
       </div>
