--- a/index.html
+++ b/index.html
@@ -652,9 +652,16 @@
               </div>
               <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
                 <div class="gallery-item" data-toggle="modal" data-target="#photoModal4">
-                  <img src="assets/img/gallery/eden001.jpg" alt="Photo 3">
+                  <img src="assets/img/gallery/eden001.jpg" alt="Photo 4">
                 </div>
                 <p class="description">Team Eden showcased their Innovative project with investors from the U.S Embassy
+                </p>
+              </div>
+              <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+                <div class="gallery-item" data-toggle="modal" data-target="#photoModal5">
+                  <img src="assets/img/gallery/usaid001.jpg" alt="Photo 5">
+                </div>
+                <p class="description">Winners of USAID Agribusiness Incubator & Development Activity December 2024
                 </p>
               </div>
             </div>
@@ -794,6 +801,44 @@
             <img src="assets/img/gallery/eden004.jpg" class="img-fluid"
               style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 2">
             <img src="assets/img/gallery/eden005.jpg" class="img-fluid"
+              style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 2">
+
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Modal for Photo 5 -->
+    <div class="modal fade" id="photoModal5" tabindex="-1" aria-labelledby="photoModal4Label" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="photoModal5Label">Winners of USAID Agribusiness Incubator & Development Activity
+              December 2024</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <!-- <div class="row"> -->
+            <img src="assets/img/gallery/usaid001.jpg" class="img-fluid"
+              style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 2">
+            <img src="assets/img/gallery/usaid002.jpg" class="img-fluid"
+              style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 2">
+            <img src="assets/img/gallery/usaid003.jpg" class="img-fluid"
+              style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 2">
+            <img src="assets/img/gallery/usaid004.jpg" class="img-fluid"
+              style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 2">
+            <img src="assets/img/gallery/usaid005.jpg" class="img-fluid"
+              style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 2">
+            <img src="assets/img/gallery/usaid006.jpg" class="img-fluid"
+              style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 2">
+            <img src="assets/img/gallery/usaid007.jpg" class="img-fluid"
+              style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 2">
+            <img src="assets/img/gallery/usaid008.jpg" class="img-fluid"
+              style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 2">
+            <img src="assets/img/gallery/usaid009.jpg" class="img-fluid"
+              style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 2">
+            <img src="assets/img/gallery/usaid010.jpg" class="img-fluid"
               style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 2">
 
           </div>
