--- a/index.html
+++ b/index.html
@@ -664,6 +664,15 @@
                 <p class="description">Winners of USAID Agribusiness Incubator & Development Activity December 2024
                 </p>
               </div>
+              <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+                <div class="gallery-item" data-toggle="modal" data-target="#photoModal6">
+                  <img src="assets/img/gallery/odcweb001.jpg" alt="Photo 6">
+                </div>
+                <p class="description">Orange Digital center Full-stack Web Development with Nodejs Graduation
+                  Ceremony - October 2024
+                </p>
+              </div>
+
             </div>
             <!-- <div class="tab-pane fade" id="videos" role="tabpanel" aria-labelledby="videos-tab">
                       <div class="row">
@@ -841,6 +850,44 @@
             <img src="assets/img/gallery/usaid010.jpg" class="img-fluid"
               style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 2">
 
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Modal for Photo 2 -->
+    <div class="modal fade" id="photoModal6" tabindex="-1" aria-labelledby="photoModal6Label" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="photoModal6Label">Orange Digital center Full-stack Web Development with Nodejs
+              Graduation Ceremony - October 2024</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <!-- <div class="row"> -->
+            <img src="assets/img/gallery/odcweb001.jpg" class="img-fluid"
+              style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 2">
+            <img src="assets/img/gallery/odcweb002.jpg" class="img-fluid"
+              style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 2">
+            <img src="assets/img/gallery/odcweb003.jpg" class="img-fluid"
+              style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 2">
+            <img src="assets/img/gallery/odcweb004.jpg" class="img-fluid"
+              style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 2">
+            <img src="assets/img/gallery/odcweb005.jpg" class="img-fluid"
+              style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 2">
+            <img src="assets/img/gallery/odcweb006.jpg" class="img-fluid"
+              style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 2">
+            <img src="assets/img/gallery/odcweb007.jpg" class="img-fluid"
+              style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 2">
+            <img src="assets/img/gallery/odcweb008.jpg" class="img-fluid"
+              style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 2">
+            <img src="assets/img/gallery/odcweb009.jpg" class="img-fluid"
+              style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 2">
+            <img src="assets/img/gallery/odcweb010.jpg" class="img-fluid"
+              style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 2">
           </div>
         </div>
       </div>
