--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
                 <div class="gallery-item" data-toggle="modal" data-target="#photoModal3">
                   <img src="assets/img/gallery/ldtp003.jpg" alt="Photo 3">
                 </div>
-                <p class="description">LDT 10, 000 Youths Graduation Ceremony.
+                <p class="description">Liberia Digital Transformation Project 10, 000 Youths Graduation Ceremony.
                   December 12, 2024 </p>
               </div>
               <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
@@ -655,6 +655,7 @@
                   <img src="assets/img/gallery/eden001.jpg" alt="Photo 4">
                 </div>
                 <p class="description">Team Eden showcased their Innovative project with investors from the U.S Embassy
+                  December 2024
                 </p>
               </div>
               <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
@@ -783,6 +784,7 @@
             <!-- <img src="assets/img/gallery/csa006.jpg" class="img-fluid"
               style="height: 300px; width: 100%; object-fit: cover; padding-top: 2px;" alt="Photo 2"> -->
             <video src="/assets/img/gallery/ldtp001.mp4" class="img-fluid" controls></video>
+            <video src="/assets/img/gallery/ldtp002.mp4" class="img-fluid" controls></video>
 
           </div>
         </div>
@@ -1057,10 +1059,11 @@
                 <h4>James A. Morgan</h4>
                 <span>CEO & Founder</span>
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter-x"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="https://x.com/Morgan_5574"><i class="bi bi-twitter-x"></i></a>
+                  <a href="https://web.facebook.com/jmorganjr5574/"><i class="bi bi-facebook"></i></a>
+                  <!-- <a href=""><i class="bi bi-instagram"></i></a> -->
+                  <a href="https://www.linkedin.com/in/james-anointed-morgan-jr-a54a6a266/"><i
+                      class="bi bi-linkedin"></i></a>
                 </div>
               </div>
             </div>
