--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <meta property="og:description"
     content="Your gateway to technology and innovation in Liberia, we specialize in creating impactful solutions for startups, businesses, and communities. Our services include media coverage for tech projects, educational content, and promoting events that inspire collaboration and knowledge-sharing. We highlight innovators, foster partnerships, and support sustainable initiatives to drive Liberia's growth in the tech ecosystem. With a strong focus on digital marketing, we help businesses improve their online presence, connect with audiences, and thrive in competitive markets. Our commitment to innovation extends to community-based projects like clean water access, showcasing how technology can solve real-world problems. Whether you’re looking for guidance as a startup or seeking to stay informed about the latest trends in technology, our expertise and resources are designed to meet your needs. Join us in building a brighter future for Liberia, where technology empowers individuals and transforms communities for the better.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://morganthetechenthusiast.netlify.app/">
+  <meta property="og:url" content="https://liberiadigitalinsights.netlify.app/">
   <!-- <meta property="og:image" content="https://yourwebsite.com/images/preview.jpg"> -->
   <meta property="og:locale" content="en_LR">
 
@@ -42,7 +42,7 @@
   <link rel="icon" href="/path-to-your-favicon.ico" type="image/x-icon">
 
   <!-- Canonical Link -->
-  <link rel="canonical" href="https://morganthetechenthusiast.netlify.app/">
+  <link rel="canonical" href="https://liberiadigitalinsights.netlify.app/">
 
 
   <!-- Favicons -->
@@ -138,13 +138,13 @@
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
-      <a href="index.html" class="logo d-flex align-items-center">
+      <a href="index.html" class="logo d-flex align-items-center" style=" min-width: 100px;">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
         <!-- <h1 class="sitename">Bootslander</h1> -->
         <!-- <div style="background-color: pink; width: 150px; height: 50px;"> -->
-        <img src="assets/img/loggoo.png" alt="" class="img-fluid"
-          style="width: 100px; height: 100%; object-fit: cover;">
+        <img src="assets/img/logo-removebg-preview.png" alt="" class="img-fluid"
+          style="width: 100%; min-height: 60px; object-fit: cover;">
         <!-- </div> -->
       </a>
 
@@ -173,7 +173,9 @@
         <div class="row gy-4 justify-content-between">
           <div class="col-lg-4 order-lg-last hero-img" data-aos="zoom-out" data-aos-delay="100">
             <!-- <img src="assets/img/hero-img.png" class="img-fluid animated" alt="Tech Blog Hero Image"> -->
-            <img src="assets/img/iPhone-13-PRO-www.facebook.com.png" class="img-fluid animated"
+            <!-- <img src="assets/img/iPhone-13-PRO-www.facebook.com.png" class="img-fluid animated"
+              style="height: 60vh; width: 100%; object-fit: contain;" alt="Tech Blog Hero Image"> -->
+              <img src="assets/img/Samsung-Galaxy-S20-m.facebook.com.png" class="img-fluid animated"
               style="height: 60vh; width: 100%; object-fit: contain;" alt="Tech Blog Hero Image">
           </div>
 
@@ -184,7 +186,7 @@
               <a href="#about" class="btn-get-started">Learn More</a>
               <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8"
                 class="glightbox btn-watch-video d-flex align-items-center">
-                <i class="bi bi-play-circle"></i><span>Watch Our Story</span>
+                <!-- <i class="bi bi-play-circle"></i><span>Watch Our Story</span> -->
               </a>
             </div>
           </div>
@@ -1347,7 +1349,7 @@
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-            <span class="sitename">Morgan The Tech Enthusiast</span>
+            <span class="sitename">Liberia Digital Insights</span>
           </a>
           <div class="footer-contact pt-3">
             <!-- <p>Sinkor</p> -->
@@ -1403,7 +1405,7 @@
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">MorganTheTechEnthusiast</strong> <span>All Rights
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">LiberiaDigitalInsights</strong> <span>All Rights
           Reserved</span>
       </p>
       <div class="credits">
