--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Home - MorganTheTechEnthusiast Tech Blog</title>
+  <title>Home - LiberiaDigitalInsights</title>
 
   <!-- Basic Meta Tags -->
   <meta charset="UTF-8">
@@ -175,7 +175,7 @@
             <!-- <img src="assets/img/hero-img.png" class="img-fluid animated" alt="Tech Blog Hero Image"> -->
             <!-- <img src="assets/img/iPhone-13-PRO-www.facebook.com.png" class="img-fluid animated"
               style="height: 60vh; width: 100%; object-fit: contain;" alt="Tech Blog Hero Image"> -->
-              <img src="assets/img/Samsung-Galaxy-S20-m.facebook.com.png" class="img-fluid animated"
+            <img src="assets/img/Samsung-Galaxy-S20-m.facebook.com.png" class="img-fluid animated"
               style="height: 60vh; width: 100%; object-fit: contain;" alt="Tech Blog Hero Image">
           </div>
 
