--- a/index.html
+++ b/index.html
@@ -1303,7 +1303,7 @@
           </div>
 
           <div class="col-lg-8">
-            <form action="https://formspree.io/f/manyabej" method="POST" class="php-email-form" data-aos="fade-up"
+            <form action="https://formspree.io/f/xjkknywb" method="POST" class="php-email-form" data-aos="fade-up"
               data-aos-delay="200">
               <div class="row gy-4">
 
