--- a/index.html
+++ b/index.html
@@ -355,24 +355,33 @@
             <div class="row">
               <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0">
                 <h3>Values</h3>
-                <p>
+                <!-- <p>
                   Our core values reflect our commitment to building a tech-savvy Liberia:
-                </p>
+                </p> -->
                 <ul>
                   <li><i class="bi bi-check2-all"></i>
-                    <span>Innovation: Driving creativity and forward-thinking in tech.</span>
+                    <span >Innovation – We strive to inspire and embrace innovative solutions to drive Liberia’s digital transformation.</span>
                   </li>
                   <li><i class="bi bi-check2-all"></i>
-                    <span>Education: Promoting STEM learning for future generations.</span>
+                    <span> Collaboration – We believe in teamwork and partnerships to achieve collective success.</span>
                   </li>
                   <li><i class="bi bi-check2-all"></i>
-                    <span>Collaboration: Building a supportive tech community for all.</span>
+                    <span> Integrity – We maintain transparency, accountability, and trust in all our engagements.</span>
+                  </li>
+                  <li><i class="bi bi-check2-all"></i>
+                    <span> Empowerment – We are committed to empowering individuals and businesses with knowledge and resources to thrive in the digital era.</span>
+                  </li>
+                  <li><i class="bi bi-check2-all"></i>
+                    <span> Excellence – We pursue quality and excellence in everything we do, ensuring impactful outcomes.</span>
+                  </li>
+                  <li><i class="bi bi-check2-all"></i>
+                    <span> Inclusivity – We champion diversity and inclusion, ensuring every voice is heard and valued in the digital ecosystem.</span>
                   </li>
                 </ul>
-                <p class="fst-italic">
+                <!-- <p class="fst-italic">
                   These values guide every story we share, every connection we foster, and every effort we make to
                   inspire technology and innovation across Liberia.
-                </p>
+                </p> -->
               </div>
               <div class="col-lg-6 order-1 order-lg-2 text-center">
                 <img src="assets/img/marketing-branding-creativity-business-values.jpg" alt="Values Image"
@@ -1073,9 +1082,9 @@
 
           <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="member">
-              <div class="pic"><img src="assets/img/team/abrahamkun.jpeg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/matthew" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>G. Abraham Kun</h4>
+                <h4>Matthew L. Gballie</h4>
                 <span>Blog Manager</span>
                 <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
